--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@ html {
         <p class="title">CEO/Founder</p>
         <p>You can contact or ask any query on the below email address.</p>
         <p>nesheshandrey12@gmail.com</p>
-        <p><button class="button">Contact</button></p><a href="http://www.google.com/"></a>
+        <p></p><a href="https://mail.google.com/" target="_blank">nesheshandrey12@gmail.com</a>
       </div>
     </div>
   </div>
