--- a/about.html
+++ b/about.html
@@ -177,21 +177,28 @@ html {
         <h2>Louis Nderitu</h2>
         <p class="title">CEO/Founder</p>
         <p>You can contact or ask any query on the below email address.</p>
-        <p>nesheshandrey12@gmail.com</p>
-        <p></p><a href="https://mail.google.com/" target="_blank">nesheshandrey12@gmail.com</a>"
+        <style>
+        button {
+          background-color: rgb(200, 0, 0);
+          color: white;
+          border: none;
+          height: 36px;
+          width: 105px;  
+          }
+        <p></p><button>nesheshandrey12@gmail.com<a href="https://mail.google.com/" target="_blank"></a></button>"
+           </style>
       </div>
     </div>
   </div>
 
   <div class="column">
     <div class="card">
-      <img src="/w3images/team2.jp" alt="Lawrence" style="width:100%">
+      <img src="" alt="Lawrence" style="width:100%">
       <div class="container">
         <h2>Lawrence Marui</h2>
         <p class="title">Manager</p>
         <p>You can contact or ask any query on the below email address.</p>
-        <p>lawrencemarui@gmail.com</p>
-        <p><button class="button">Contact</button></p><a href="www.gmail.com"></a>
+        <a href="https://mail.google.com/" target="_blank">nesheshandrey12@gmail.com</a>"
         
         </p>
       </div>
