--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@ html {
           width: 105px;  
           }
            </style>
-        <p></p><button>nesheshandrey12@gmail.com<a href="https://mail.google.com/" target="_blank"></a></button>"
+        <p></p><button>nesheshandrey12@gmail.com<a href="https://mail.google.com/" target="_blank"></a></button>
       </div>
     </div>
   </div>
