--- a/about.html
+++ b/about.html
@@ -177,16 +177,7 @@ html {
         <h2>Louis Nderitu</h2>
         <p class="title">CEO/Founder</p>
         <p>You can contact or ask any query on the below email address.</p>
-        <style>
-        button {
-          background-color: rgb(200, 0, 0);
-          color: white;
-          border: none;
-          height: 36px;
-          width: 105px;  
-          }
-           </style>
-        <p></p><button>nesheshandrey12@gmail.com<a href="https://mail.google.com/" target="_blank"></a></button>
+        <p></p><a href="https://mail.google.com/" target="_blank"> nesheshandrey122gmail.com </a>
       </div>
     </div>
   </div>
