--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@ html {
         <h2>Louis Nderitu</h2>
         <p class="title">CEO/Founder</p>
         <p>You can contact or ask any query on the below email address.</p>
-        <p></p><a href="https://mail.google.com/" target="_blank"> nesheshandrey122gmail.com </a>
+        <p></p><a href="https://mail.google.com/" target="_blank">nesheshandrey12@gmail.com</a>
       </div>
     </div>
   </div>
