--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@ html {
         <h2>Lawrence Marui</h2>
         <p class="title">Manager</p>
         <p>You can contact or ask any query on the below email address.</p>
-        <a href="https://mail.google.com/" target="_blank">nesheshandrey12@gmail.com</a>"
+        <a href="https://mail.google.com/" target="_blank">nesheshandrey12@gmail.com</a>
         
         </p>
       </div>
