--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@ html {
       <div class="container">
         <h2>Louis Nderitu</h2>
         <p class="title">CEO/Founder</p>
-        <p>You can contact or ask any query on the below email address.</p>
+        <p>You can contact or ask any query by clicking on the below email address below.</p>
         <p></p><a href="https://mail.google.com/" target="_blank">nesheshandrey12@gmail.com</a>
       </div>
     </div>
@@ -188,7 +188,7 @@ html {
       <div class="container">
         <h2>Lawrence Marui</h2>
         <p class="title">Manager</p>
-        <p>You can contact or ask any query on the below email address.</p>
+        <p>You can contact or ask any query by clicking on the below email address.</p>
         <a href="https://mail.google.com/" target="_blank">nesheshandrey12@gmail.com</a>
         </p>
       </div>
