--- a/about.html
+++ b/about.html
@@ -118,8 +118,8 @@ html {
 .about-section {
   padding: 50px;
   text-align: center;
-  background-color: #474e5d;
-  color: white;
+  background-color: #000000;
+  color: #87cefa;
 }
 
 .container {
