--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@ html {
 .about-section {
   padding: 50px;
   text-align: center;
-  background-color: #000000;
+  background-color: #c0c0c0;
   color: #87cefa;
 }
 
