--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@ html {
   padding: 50px;
   text-align: center;
   background-color: #c0c0c0;
-  color: #87cefa;
+  color: #FFFFFF;
 }
 
 .container {
