--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ form.example::after {
   <body>
   
   <div class="icon-bar"> 
-    <a href="http://www.instagram.com/"><i class="fa fa-instagram"></i></a> 
+    <a href="http://www.instagram.com/huindaserik/"><i class="fa fa-instagram"></i></a> 
     </div>
     <html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
